<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
  <string name="app_name">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units Button</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint">FB</string>
  <string name="input_prefill" />
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="no_add_symbol">Could not find symbol</string>
  <string name="try_again">Please Try Again</string>
  <string name="already_saved_stock">"This stock is already saved!"</string>

  <string name="pref_invalid_stock_symbol" translatable="false">invalid_stock_symbol</string>
  <!-- Accessibility Strings -->
  <string name="content_text">Search for a stock symbol</string>
  <string name="title_activity_stock_detail">StockDetailActivity</string>
  <string name="chart_description">Graph over stock bid price and time of one year</string>

  <!-- Stock Detail Extra Strings -->
  <string name="stock_symbol">Stock Symbol</string>
  <string name="first_trade">First Trade</string>
  <string name="last_trade">Last Trade</string>
  <string name="currency">Currency</string>
  <string name="bid_price">Bid Price</string>

  <!-- Strings related to Widgets -->
  <string name="title_widget_stock">Stock Hawk Details</string>

  <!-- Key name for storing stock status in SharedPreferences -->
  <string name="pref_stock_key" translatable="false">stock-status</string>

  <!-- Empty Weather Database -->
  <string name="empty_stock_list">No Stock Information Available</string>
  <string name="empty_stock_list_no_network">No stock information available. The network is not available to fetch stock data.</string>
  <string name="empty_stock_list_server_down">No stock information available. The server is not returning data.</string>
  <string name="empty_stock_list_server_error">No stock information available. The server is not returning valid data. Please check for an updated version of StockHawk.</string>

  <!-- A11y -->
  <string name="a11y_company_name">Company name: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_stock_symbol">Stock Symbol: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_first_trade">First Trade: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_last_trade">Last Trade: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_currency">Currency: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_price">Bid Price: <xliff:g id="condition">%1$s</xliff:g></string>
  <string name="a11y_marker_text"><xliff:g id="condition">%1$s</xliff:g> on <xliff:g id="condition">%2$s</xliff:g></string>
  <string name="a11y_change">Change in Bid Price: <xliff:g id="condition">%1$s</xliff:g></string>

</resources>
