<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    app:columnCount="2"
    android:background="@color/detail_accent_pane_background"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingLeft="@dimen/stock_detail_horizontal_padding"
    android:paddingStart="@dimen/stock_detail_horizontal_padding"
    android:paddingRight="@dimen/stock_detail_horizontal_padding"
    android:paddingEnd="@dimen/stock_detail_horizontal_padding">

    <TextView
        android:id="@+id/stock_symbol_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/stock_symbol"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/stock_symbol_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        tools:text="MSFT"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_first_trade_label_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/first_trade"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_first_trade_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        tools:text="13/03/86"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_last_trade_label_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/last_trade"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_last_trade_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        tools:text="16/09/16"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_currency_label_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/currency"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_currency_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        tools:text="USD"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_bid_price_label_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/bid_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:id="@+id/stock_bid_price_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        tools:text="57.08"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />
</android.support.v7.widget.GridLayout>